<resources>
  <string name="app_name">Partner_Assist</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  --------------------------------------------------------------------------------------------------
  <string name="signin_prtnrid_txt">Email ID</string>
  <string name="signin_pswrd_txt">Password</string>
  <string name="signin_login_txt">LOGIN</string>
  <string name="signin_forgot_txt">Forgot Password ?</string>
  <string name="signin_foter_txt">Powered by Bytech</string>
  ---------------------------------------------------------------
  <string name="home_speech_txt">Tab the button to speak</string>
  <string name="home_speech_cmd">To Start speaking say "Hello PA"</string>
  <string name="menu_caption">Say "close" to close PA "proceed" or "go" to process your question, "Cancel" to ask another</string>
  <string name="digits_caption">Please Speak your question</string>

  ---------------------------------------------------------------
  <string name="response_graphvw_txt">GRAPH VIEW</string>
  <string name="response_gridvw_txt">GRID VIEW</string>
  <string name="response_txtvw_txt">TEXT VIEW</string>

</resources>
